--- a/gradle.properties
+++ b/gradle.properties
@@ -19,3 +19,14 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+# Room incremental annotation
+#kapt.incremental.apt=true
+# Databinding incremental annotation
+android.databinding.incremental=true
+# Faster bu#ild
+kapt.use.worker.api=true
+# If only a few changes are made, the build time greatly decreases
+kapt.include.compile.classpath=false
+kapt.verbose=true
+# Incremental compilation
+kotlin.incremental=true
